# FUELDecompilation

./: .clang-format  .clang-format-ignore  .clangd  .gitignore  .gitmodules  CMakeLists.txt  FUEL.exe.cdf  FUEL.exe.cfg  README.md  libfuel.json  objdiff.json
.github/workflows/: build.yml
Engine/: LiveNetPlayManager_Z.cpp  Lod_Z.cpp  Main_Z.cpp  Name_Z.cpp  String_Z.cpp  UnPack_Z.cpp
Engine/Includes/: LiveNetPlayManager_Z.h  Main_Z.h  Name_Z.h  NetPlayManager_Z.h  Renderer_Z.h  String_Z.h  Types_Z.h  UnPack_Z.h  WinLiveNetPlayManager_Z.h
Engine/Private/: Renderer_Z.cpp
EngineConfig/: EngineConfig.h.in
LIBPC_Common/: WinMain_Z.cpp
LIBPC_Common/Includes/HW/: Memory_Z.h
LIBPC_TNL/: D3DTnL_Renderer_Z.cpp
LIBPC_TNL/Includes/: D3DTnL_Renderer_Z.h
OffRoad/: GenWorld_Z.cpp  IT_Dyn_VehicleMove_G.cpp  InGameMenuHUD.cpp  InGamePauseHUD.cpp  MapHUD.cpp  VehiclesDataMgr_G.cpp  ViewportHUD.cpp  floats.cpp  strings.cpp  strings_utf8.cpp  trivial.cpp  vftables.cpp  xcu.c
OffRoad/Includes/: InGameMenuHUD.h  InGamePauseHUD.h  MapHUD.h  VehiclesDataMgr_G.h  ViewportHUD.h  vftables.hpp
Resources/: FUEL.rc
ghidra_scripts/: delink.py
libs/: AVIFIL32.def  MSVFW32.def  binkw32.def  crtheap.c  iob.cpp  xlive.def
libs/dmalloc/: append.c  chunk.c  compat.c  conf.h  dmalloc.h  error.c  heap.c  return.h  settings.h  user_malloc.c  user_malloc.h
libs/include/: SecuRom.h  bink.h  radbase.h
objconv/: cmdline.cpp  cmdline.h  cof2cof.cpp  cof2elf.cpp  coff.cpp  coff.h  containers.cpp  disasm1.cpp  elf.cpp  elf.h  elf2cof.cpp  elf2elf.cpp  error.cpp  library.h  mac2asm.cpp  mac2mac.cpp  macho.cpp  maindef.h  omf.cpp  omf.h  omf2asm.cpp  omf2cof.cpp  omfhash.cpp  opcodes.cpp
res/: FUEL.rc  MANIFEST1_1.txt  __GDF_XML.txt
src/: xcu.c
src/includes/: config.h.in
tools/: coffdrop.c  comments2coffdrop.py  comments2objconv.py  comments_to_json.py  dibs.c  dumpbin_to_json.py  frida_launcher.py  requirements.txt  usercall_agent.js
tools/objconv/: LICENSE.txt  cmdline.cpp  cof2asm.cpp  cof2omf.cpp  containers.h  converters.h  disasm.h  disasm2.cpp  elf2asm.cpp  elf2mac.cpp  error.cpp  library.cpp  mac2elf.cpp  mac2mac.cpp  main.cpp  maindef.h
